[package]
name = "xchacha20"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "*"
hex = "*"
base64 = "*"
rustc-serialize = "*"

# Random
rand = { version = "*", features = ["std"] }
rand_chacha = "*"

# Command-line options
clap = { version = "*", features = ["derive", "color"] }

# Structured logging
log = "*"
env_logger = "*"
